--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Loading/LoadingPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Loading/LoadingPage.xaml
@@ -64,10 +64,10 @@
         </ScrollViewer>
 
         <controls:Loading x:Name="LoadingControl"
-                          LoadingHorizontalAlignment="{Binding LoadingContentHorizontalAlignment.Value}"
-                          LoadingVerticalAlignment="{Binding LoadingContentVerticalAlignment.Value}"
-                          LoadingBackground="{Binding LoadingBackground.Value}"
-                          LoadingOpacity="{Binding OpacityForLoadingControl.Value}">
+                          HorizontalContentAlignment="{Binding LoadingContentHorizontalAlignment.Value}"
+                          VerticalContentAlignment="{Binding LoadingContentVerticalAlignment.Value}"
+                          Background="{Binding LoadingBackground.Value}"
+                          Opacity="{Binding OpacityForLoadingControl.Value}">
             <ContentControl x:Name="LoadingContentControl" />
         </controls:Loading>
     </Grid>
