--- a/Microsoft.Toolkit.Uwp.UI.Controls/TaskControl/TaskControl.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/TaskControl/TaskControl.xaml
@@ -21,18 +21,7 @@
 
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="TaskStates">
-                                <VisualState x:Name="NotStarted">
-                                    <VisualState.Setters>
-                                        <Setter Target="ProgressPresenter.Visibility" Value="Collapsed"/>
-                                        <Setter Target="MainContentPresenter.Visibility" Value="Collapsed"/>
-                                        <Setter Target="FaultedPresenter.Visibility" Value="Collapsed"/>
-                                        <Setter Target="CanceledPresenter.Visibility" Value="Collapsed"/>
-                                        <Setter Target="NotStartedPresenter.Visibility" Value="Visible"/>
-                                    </VisualState.Setters>
-                                    <VisualState.StateTriggers>
-                                        <StateTrigger IsActive="{Binding Task.IsStarted, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource InvBoolConverter}}"/>
-                                    </VisualState.StateTriggers>
-                                </VisualState>
+                                <VisualState x:Name="NotStarted"/>
                                 <VisualState x:Name="Running">
                                     <VisualState.Setters>
                                         <Setter Target="ProgressPresenter.Visibility" Value="Visible"/>
@@ -42,7 +31,7 @@
                                         <Setter Target="NotStartedPresenter.Visibility" Value="Collapsed"/>
                                     </VisualState.Setters>
                                     <VisualState.StateTriggers>
-                                        <StateTrigger IsActive="{Binding Task.IsRunning, RelativeSource={RelativeSource TemplatedParent}}"/>
+                                        <StateTrigger IsActive="{Binding Task.IsRunning, FallbackValue=false, TargetNullValue=false, RelativeSource={RelativeSource TemplatedParent}}"/>
                                     </VisualState.StateTriggers>
                                 </VisualState>
                                 <VisualState x:Name="Successfull">
@@ -54,7 +43,7 @@
                                         <Setter Target="NotStartedPresenter.Visibility" Value="Collapsed"/>
                                     </VisualState.Setters>
                                     <VisualState.StateTriggers>
-                                        <StateTrigger IsActive="{Binding Task.IsSuccessfull, RelativeSource={RelativeSource TemplatedParent}}"/>
+                                        <StateTrigger IsActive="{Binding Task.IsSuccessfull, FallbackValue=false, TargetNullValue=false, RelativeSource={RelativeSource TemplatedParent}}"/>
                                     </VisualState.StateTriggers>
                                 </VisualState>
                                 <VisualState x:Name="Faulted">
@@ -66,7 +55,7 @@
                                         <Setter Target="NotStartedPresenter.Visibility" Value="Collapsed"/>
                                     </VisualState.Setters>
                                     <VisualState.StateTriggers>
-                                        <StateTrigger IsActive="{Binding Task.IsFaulted, RelativeSource={RelativeSource TemplatedParent}}"/>
+                                        <StateTrigger IsActive="{Binding Task.IsFaulted, FallbackValue=false, TargetNullValue=false, RelativeSource={RelativeSource TemplatedParent}}"/>
                                     </VisualState.StateTriggers>
                                 </VisualState>
                                 <VisualState x:Name="Cancelled">
@@ -78,7 +67,7 @@
                                         <Setter Target="NotStartedPresenter.Visibility" Value="Collapsed"/>
                                     </VisualState.Setters>
                                     <VisualState.StateTriggers>
-                                        <StateTrigger IsActive="{Binding Task.IsCanceled, RelativeSource={RelativeSource TemplatedParent}}"/>
+                                        <StateTrigger IsActive="{Binding Task.IsCanceled, FallbackValue=false, TargetNullValue=false, RelativeSource={RelativeSource TemplatedParent}}"/>
                                     </VisualState.StateTriggers>
                                 </VisualState>
                             </VisualStateGroup>
@@ -89,16 +78,15 @@
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
                             <ContentPresenter x:Name="HeaderContentPresenter" ContentTemplate="{TemplateBinding MasterHeaderTemplate}" Content="{TemplateBinding MasterHeader}" Margin="12,0" Visibility="Collapsed" x:DeferLoadStrategy="Lazy"/>
-                            <ContentPresenter x:Name="MainContentPresenter" Grid.Row="1" Content="{Binding Task.Result, RelativeSource={RelativeSource TemplatedParent}}" ContentTemplate="{TemplateBinding ContentTemplate}"/>
-                            <ContentPresenter x:Name="NotStartedPresenter" Grid.Row="1" Content="{TemplateBinding NotStartedContent}" ContentTemplate="{TemplateBinding NotStartedContentTemplate}"/>
-                            <ContentPresenter x:Name="ProgressPresenter" Grid.Row="1" Content="{TemplateBinding ProgressContent}" ContentTemplate="{TemplateBinding ProgressContentTemplate}"/>
-                            <ContentPresenter x:Name="FaultedPresenter" Grid.Row="1" Content="{TemplateBinding FaultedContent}" ContentTemplate="{TemplateBinding FaultedContentTemplate}"/>
-                            <ContentPresenter x:Name="CanceledPresenter" Grid.Row="1" Content="{TemplateBinding CanceledContent}" ContentTemplate="{TemplateBinding CanceledContentTemplate}"/>
+                            <ContentPresenter x:Name="NotStartedPresenter" Grid.Row="1" Content="{TemplateBinding NotStartedContent}" ContentTemplate="{TemplateBinding NotStartedContentTemplate}" Visibility="Visible"/>
+                            <ContentPresenter x:Name="MainContentPresenter" Grid.Row="1" Content="{Binding Task.Result, RelativeSource={RelativeSource TemplatedParent}}" ContentTemplate="{TemplateBinding ContentTemplate}" Visibility="Collapsed" x:DeferLoadStrategy="Lazy"/>
+                            <ContentPresenter x:Name="ProgressPresenter" Grid.Row="1" Content="{TemplateBinding ProgressContent}" ContentTemplate="{TemplateBinding ProgressContentTemplate}" Visibility="Collapsed" x:DeferLoadStrategy="Lazy"/>
+                            <ContentPresenter x:Name="FaultedPresenter" Grid.Row="1" Content="{TemplateBinding FaultedContent}" ContentTemplate="{TemplateBinding FaultedContentTemplate}" Visibility="Collapsed" x:DeferLoadStrategy="Lazy"/>
+                            <ContentPresenter x:Name="CanceledPresenter" Grid.Row="1" Content="{TemplateBinding CanceledContent}" ContentTemplate="{TemplateBinding CanceledContentTemplate}" Visibility="Collapsed" x:DeferLoadStrategy="Lazy"/>
                         </Grid>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-
 </ResourceDictionary>
