--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeView/BladePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeView/BladePage.xaml
@@ -7,17 +7,12 @@
       xmlns:samples="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
       mc:Ignorable="d">
 
-    <Page.Resources>
-        <ResourceDictionary>
-            <!-- Converters -->
-            <samples:BladeModeToBooleanConverter x:Key="BladeModeToBooleanConverter" />
-        </ResourceDictionary>
-    </Page.Resources>
-
     <Grid Background="{StaticResource Brush-Grey-05}">
-        <controls:BladeView Padding="0"
+        <controls:BladeView x:Name="BladeView"
+                            Padding="0"
                             HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch">
+                            VerticalAlignment="Stretch"
+                            BladeMode="{Binding BladeMode.Value}">
             <controls:BladeItem x:Name="FirstBlade"
                                 Title="Test"
                                 Width="400"
@@ -26,20 +21,20 @@
                                 IsOpen="True"
                                 TitleBarVisibility="Collapsed">
                 <StackPanel Margin="24">
-                    <TextBlock Text="This first blade has a hidden TitleBar, so you can't close it."
-                               TextWrapping="WrapWholeWords" />
-                    <TextBlock Margin="0,12,0,0"
-                               Text="The buttons below toggle more blades on and off. The blades appear in the order that they're opened."
-                               TextWrapping="WrapWholeWords" />
-                    <ToggleButton Margin="0,24,0,0"
-                                  Content="Default blade"
-                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=SecondBlade}" />
-                    <ToggleButton Margin="0,24,0,0"
-                                  Content="Custom titlebar"
-                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=ThirdBlade}" />
-                    <ToggleButton Margin="0,24,0,0"
-                                  Content="Custom close button"
-                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=FourthBlade}" />
+                    <TextBlock TextWrapping="WrapWholeWords" Text="This first blade has a hidden TitleBar, so you can't close it." />
+
+                    <TextBlock TextWrapping="WrapWholeWords" Margin="0,12,0,0" Text="You can automatically set blade dimensions to be fullscreen (see BladeMode property)." />
+                    
+                    <TextBlock TextWrapping="WrapWholeWords" Margin="0,12,0,0" Text="The buttons below toggle more blades on and off. The blades appear in the order that they're opened." />
+                    <ToggleButton Margin="0, 24, 0, 0"
+                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=SecondBlade}"
+                                  Content="Default blade" />
+                    <ToggleButton Margin="0, 24, 0, 0"
+                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=ThirdBlade}"
+                                  Content="Custom titlebar" />
+                    <ToggleButton Margin="0, 24, 0, 0"
+                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=FourthBlade}"
+                                  Content="Custom close button" />
                 </StackPanel>
             </controls:BladeItem>
 
