--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
@@ -42,8 +42,8 @@
             <TextBlock Style="{StaticResource TitleText}">Text box with Custom Mask</TextBlock>
             <Border Style="{StaticResource DividingBorder}" />
             <TextBox 
-            controls:TextBoxMask.Mask="+1999-9999"
-            controls:TextBoxMask.PlaceHolder=" "
+            controls:TextBoxMask.Mask="a5c-5c*9"
+                controls:TextBoxMask.CustomMask="5:[1-5],c:^[a-c]"
                  TextWrapping="Wrap" VerticalAlignment="Top" Height="26" Width="166"/>
         </StackPanel>
 
