--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
@@ -1,12 +1,11 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.TextBoxMaskPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    mc:Ignorable="d">
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.TextBoxMaskPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
     <Page.Resources>
         <Style x:Key="TitleText"
@@ -28,23 +27,29 @@
         <StackPanel>
             <TextBlock Style="{StaticResource TitleText}">Text box with Mask 9a9a-a9a*</TextBlock>
             <Border Style="{StaticResource DividingBorder}" />
-            <TextBox 
-            controls:TextBoxMask.Mask="9a9a-a9a*"
-                 TextWrapping="Wrap" VerticalAlignment="Top" Height="26" Width="166"/>
+            <TextBox Width="166"
+                     Height="26"
+                     VerticalAlignment="Top"
+                     controls:TextBoxMask.Mask="9a9a-a9a*"
+                     TextWrapping="Wrap" />
 
             <TextBlock Style="{StaticResource TitleText}">Text box with Mask +1999-9999 and place holder space</TextBlock>
             <Border Style="{StaticResource DividingBorder}" />
-            <TextBox 
-            controls:TextBoxMask.Mask="+1999-9999"
-            controls:TextBoxMask.PlaceHolder=" "
-                 TextWrapping="Wrap" VerticalAlignment="Top" Height="26" Width="166"/>
+            <TextBox Width="166"
+                     Height="26"
+                     VerticalAlignment="Top"
+                     controls:TextBoxMask.Mask="+1999-9999"
+                     controls:TextBoxMask.PlaceHolder=" "
+                     TextWrapping="Wrap" />
 
             <TextBlock Style="{StaticResource TitleText}">Text box with Custom Mask</TextBlock>
             <Border Style="{StaticResource DividingBorder}" />
-            <TextBox 
-            controls:TextBoxMask.Mask="a5c-5c*9"
-                controls:TextBoxMask.CustomMask="5:[1-5],c:^[a-c]"
-                 TextWrapping="Wrap" VerticalAlignment="Top" Height="26" Width="166"/>
+            <TextBox Width="166"
+                     Height="26"
+                     VerticalAlignment="Top"
+                     controls:TextBoxMask.CustomMask="5:[1-5],c:^[a-c]"
+                     controls:TextBoxMask.Mask="a5c-5c*9"
+                     TextWrapping="Wrap" />
         </StackPanel>
 
     </Grid>
