Imporving regex mask property performance and removing unused imports

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
@@ -42,7 +42,7 @@
 
         <TextBox Grid.Row="3"
                  controls:TextBoxMasks.RegexMask="^\d+$"
-                 Header="Numbers Regex Mask using RegexMask property for ^\d+$"
+                 Header="Numbers Mask using RegexMask property for ^\d+$"
                  Style="{StaticResource MaskedTextBoxStyle}" />
     </Grid>
 </Page>
