add place holder to mask type

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
@@ -51,7 +51,7 @@
 
             <TextBox Grid.Row="3"
                      controls:TextBoxMasks.Mask="^\d+$"
-                     controls:TextBoxMasks.MaskType="RegexMask"
+                     controls:TextBoxMasks.MaskType="Regex"
                      Header="Numbers mask using RegexMask property for ^\d+$ that allows only numbers"
                      Style="{StaticResource MaskedTextBoxStyle}" />
         </Grid>
